Bot message when loading [new_release]

--- a/json/lang/en.json
+++ b/json/lang/en.json
@@ -17,7 +17,8 @@
         "success": "Done👍🏻",
         "missing": "The campus preference is missing!\nTo use this command set the campus preference",
         "exception": "An exception occurred during the search process☹️\nTry again later or contact <a href='https://github.com/gorlix'>Alessandro Gorla</a> for further info",
-        "until": "free until"
+        "until": "free until",
+        "loading": "Loading..."
     },
     "keyboards": {
         "search": "🔍Search",
