--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -17,7 +17,8 @@
         "success": "Fatto👍🏻",
         "missing": "Non hai ancora indicato il tuo campus preferito!\nPer usare questa funzione devi prima impostare le tue preferenze",
         "exception": "C'è stato un problema durante la ricerca☹️\nRitenta più tardi o contattami <a href='https://github.com/gorlix'>Alessandro Gorla</a> per ulteriori informazioni",
-        "until": "fino alle"
+        "until": "fino alle",
+        "loading": "Caricamento in corso..."
     },
     "keyboards": {
         "search": "🔍Cerca",
