feat: add caching, granular opening hours, and improved error handling
- Caching: Implemented 30-minute in-memory cache for find_classrooms to reduce network requests and improve speed for repeated searches.
- UX: Added "Caricamento in corso..." (Loading) message during search.
- Opening Hours: Added json/opening_hours.json with granular schedules and updated filtering logic to respect specific building closures.
- Error Handling: Fixed crash when server returns 502/empty results (now shows "No rooms found").
- Logs: Silenced verbose apscheduler logs and simplified Heartbeat logging.
- Performance: Added logging for network request duration.

--- a/json/lang/en.json
+++ b/json/lang/en.json
@@ -18,7 +18,8 @@
         "missing": "The campus preference is missing!\nTo use this command set the campus preference",
         "exception": "An exception occurred during the search process☹️\nTry again later or contact <a href='https://github.com/gorlix'>Alessandro Gorla</a> for further info",
         "until": "free until",
-        "loading": "Loading..."
+        "loading": "Loading...",
+        "no_rooms": "No free rooms found for the selected criteria (or campus closed)."
     },
     "keyboards": {
         "search": "🔍Search",
