--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -29,7 +29,7 @@
         "language": "Lingua",
         "campus": "Campus Preferito",
         "time": "Durata della Ricerca",
-        "cancel": "/Indietro",
+        "cancel": "❌Indietro",
         "today": "Oggi",
         "tomorrow": "Domani"
     }
