--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -1,24 +1,25 @@
 {
     "texts": {
-        "welcome": "Ciao <b>{}</b>! Questo è Aule Libere Polimi bot, con questo bot sarai in grado di cercare le aule libere per l'intera settimana!\nQuesto bot è mantenuto da <b><a href='https://github.com/gorlix'>Alessandro Gorla (Gorlix)</a></b> (fork di <b><a href='https://github.com/feDann'>FeDann</a></b>), per qualsiasi problema, chiedi!.\nSe vuoi ulteriori informazioni premi info!\nPuoi terminare in qualsiasi momento la conversazione con il comando /terminate , attenzione così facendo eliminerai tutte le tue preferenze!",
-        "location": "Seleziona il campus",
-        "day": "Seleziona il giorno",
-        "starting_time": "Seleziona l'orario iniziale",
-        "ending_time": "Seleziona l'orario finale",
-        "error": "Sei stato bonkato, usa i pulsanti!",
-        "ops": "Il PoliMi adesso è chiuso!\nTi darò invee le informazioni sulle aule libere di domattina!",
-        "terminate": "Conversazione terminata!\nPremi /start per iniziare una nuova conversazione!",
-        "cancel": "Torno indietro⬅",
-        "info": "Per iniziare la ricerca premi il pulsante \"🔍Cerca\" e dopo inserisci usanto gli appositi pulsanti le informazioni richieste.\n\nIl pulsante \"🕒Ora\" ti permette , dopo aver impostato le preferenze, di cercare velocemente le aule libere!\n\nIl pulsante \"⚙️Preferenze\" ti permette di impostare il tuo campus preferito e la durata in ore per la ricerca rapida, inoltre ti permette di selezionare la tua lingua preferita!\n\nSe vuoi dare un'occhiata al codice lo puoi trovare su GitHub <a href='https://github.com/gorlix/AuleLiberePoliMi'>qui</a>. Questo progetto è un fork di <a href='https://github.com/feDann/AuleLiberePoliMi'>questo repository</a>.",
-        "settings": "Da qui puoi impostare la tua lingua preferita, campus preferito e durata in ore per la ricerca rapida!",
-        "language": "Seleziona la tua lingua preferita",
-        "campus": "Seleziona il tuo campus preferito per la ricerca rapida",
-        "time": "Seleziona il numero di ore per la ricerca rapida",
-        "success": "Fatto👍🏻",
-        "missing": "Non hai ancora indicato il tuo campus preferito!\nPer usare questa funzione devi prima impostare le tue preferenze",
-        "exception": "C'è stato un problema durante la ricerca☹️\nRitenta più tardi o contattami <a href='https://github.com/gorlix'>Alessandro Gorla</a> per ulteriori informazioni",
+        "welcome": "Ciao <b>{}</b>! 👋\nQuesto è <b>Aule Libere Polimi</b> bot 📚.\nCon questo bot puoi cercare aule libere per l'intera settimana! 🗓️\n\nQuesto bot è mantenuto da <b><a href='https://github.com/gorlix'>Alessandro Gorla (Gorlix)</a></b> (fork di <b><a href='https://github.com/feDann'>FeDann</a></b>).\nPer qualsiasi problema, non esitare a chiedere! 🛠️\n\nSeleziona <b>info</b> per maggiori dettagli! ℹ️\nPuoi terminare la conversazione in qualsiasi momento con /terminate 🛑 (Attenzione: eliminerà le tue preferenze salvate!).",
+        "location": "📍 Seleziona il campus:",
+        "day": "📅 Seleziona il giorno:",
+        "starting_time": "⏰ Seleziona l'orario di inizio:",
+        "ending_time": "🏁 Seleziona l'orario di fine:",
+        "error": "Per favor, usa i pulsanti forniti! 🥺",
+        "ops": "Il PoliMi ora è chiuso! 🌙\nTi mostrerò invece le aule libere per domattina (8:00 - 10:00)! ☀️",
+        "terminate": "Conversazione terminata! A presto! 👋\nPremi /start per iniziare una nuova conversazione! 🔄",
+        "cancel": "Torno indietro ⬅️",
+        "info": "Per iniziare la ricerca premi il pulsante \"🔍Cerca\" e inserisci le informazioni richieste usando la tastiera.\n\nIl pulsante \"🕒Ora\" ti permette, dopo aver impostato le preferenze, di trovare velocemente le aule libere! ⚡\n\nIl pulsante \"⚙️Preferenze\" ti consente di impostare il tuo campus preferito e la durata predefinita della ricerca rapida. Qui puoi anche cambiare lingua! 🌍\n\nIl codice sorgente è disponibile su <a href='https://github.com/gorlix/AuleLiberePoliMi'>GitHub</a>! 💻\nQuesto progetto è un fork di <a href='https://github.com/feDann/AuleLiberePoliMi'>questo repository</a>.",
+        "settings": "⚙️ <b>Menu Impostazioni</b>\nQui puoi scegliere la tua lingua preferita, il campus e la durata della ricerca rapida! 🔧",
+        "language": "🌍 Seleziona la tua lingua preferita:",
+        "campus": "🏫 Seleziona il tuo campus preferito per la ricerca rapida:",
+        "time": "⏳ Seleziona la durata (in ore) per la ricerca rapida:",
+        "success": "Fatto! 👍",
+        "missing": "⚠️ Campus preferito mancante!\nPer usare questa funzione, imposta prima le tue preferenze nel menu Impostazioni.",
+        "exception": "Ops! Si è verificato un problema durante la ricerca ☹️\nRitenta più tardi o contatta <a href='https://github.com/gorlix'>Alessandro Gorla</a> per info. 🆘",
         "until": "fino alle",
-        "loading": "Caricamento in corso..."
+        "loading": "Caricamento in corso... ⏳",
+        "no_rooms": "Nessuna aula libera trovata per i criteri selezionati (o campus chiuso). 😔"
     },
     "keyboards": {
         "search": "🔍Cerca",
