--- a/json/lang/en.json
+++ b/json/lang/en.json
@@ -31,6 +31,7 @@
         "time": "Search Duration",
         "cancel": "❌Back",
         "today": "Today",
-        "tomorrow": "Tomorrow"
+        "tomorrow": "Tomorrow",
+        "all_buildings": "All Buildings"
     }
 }
