add all campus button in keyboard

--- a/json/lang/en.json
+++ b/json/lang/en.json
@@ -30,6 +30,7 @@
         "time": "Search Duration",
         "cancel": "❌Back",
         "today": "Today",
-        "tomorrow": "Tomorrow"
+        "tomorrow": "Tomorrow",
+        "all_buildings": "All Buildings"
     }
 }
