--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -30,6 +30,7 @@
         "time": "Durata della Ricerca",
         "cancel": "❌Indietro",
         "today": "Oggi",
-        "tomorrow": "Domani"
+        "tomorrow": "Domani",
+        "all_buildings": "Tutti gli edifici"
     }
 }
