--- a/json/lang/en.json
+++ b/json/lang/en.json
@@ -28,7 +28,7 @@
         "language": "Language",
         "campus": "Preferred Campus",
         "time": "Search Duration",
-        "cancel": "❌Back",
+        "cancel": "/Back",
         "today": "Today",
         "tomorrow": "Tomorrow",
         "all_buildings": "All Buildings"
