--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -27,7 +27,7 @@
         "info": "ℹinfo",
         "preferences": "⚙️Preferenze",
         "language": "Lingua",
-        "campus": "Campus Preferito",
+        "campus": "🏫 Campus Preferito",
         "time": "Durata della Ricerca",
         "cancel": "❌Indietro",
         "today": "Oggi",
