feat: add Emoji Mode, improve logging, and fix bugs
**New Feature: Emoji Mode**
- Added a new "Format" toggle in Settings (Text vs Emoji).
- Created [functions/formatter.py](cci:7://file:///home/gorlix/Documents/Git/AuleLiberePoliMi/functions/formatter.py:0:0-0:0) to handle message formatting and time conversion (e.g., 15.5 -> 15:30).
- Updated [string_builder.py](cci:7://file:///home/gorlix/Documents/Git/AuleLiberePoliMi/functions/string_builder.py:0:0-0:0) to support the new format mode.
- Implemented visual alignment in Emoji Mode using ideographic spaces for rooms without plugs.
- Added persistent user preference for [format_mode](cci:1://file:///home/gorlix/Documents/Git/AuleLiberePoliMi/functions/user_data_handler.py:76:0-83:21).
- Updated IT/EN language files with new texts and button labels.
**Logging & Performance**
- Added `requests-cache` to cache PoliMi API responses (1 hour duration).
- Added logging for server response time and Cache HIT/MISS status.
- Simplified heartbeat logging in [bot.py](cci:7://file:///home/gorlix/Documents/Git/AuleLiberePoliMi/bot.py:0:0-0:0) to reduce log noise.
**Bug Fixes**
- Fixed [now()](cci:1://file:///home/gorlix/Documents/Git/AuleLiberePoliMi/bot.py:110:0-140:37) (ORA) command failure by correctly mapping Campus Names to their internal API Codes.
- Fixed `NameError` crash in `bot.py` by reordering function definitions.

--- a/json/lang/it.json
+++ b/json/lang/it.json
@@ -19,7 +19,9 @@
         "exception": "Ops! Si è verificato un problema durante la ricerca ☹️\nRitenta più tardi o contatta <a href='https://github.com/gorlix'>Alessandro Gorla</a> per info. 🆘",
         "until": "fino alle",
         "loading": "Caricamento in corso... ⏳",
-        "no_rooms": "Nessuna aula libera trovata per i criteri selezionati (o campus chiuso). 😔"
+        "no_rooms": "Nessuna aula libera trovata per i criteri selezionati (o campus chiuso). 😔",
+        "format_emoji": "Passato alla modalità Emoji! ⚡\nLegenda:\n🕒 = Libera fino alle\n🔌 = Presa elettrica",
+        "format_text": "Passato alla modalità Testo! 📝"
     },
     "keyboards": {
         "search": "🔍Cerca",
@@ -32,6 +34,7 @@
         "cancel": "❌Indietro",
         "today": "Oggi",
         "tomorrow": "Domani",
-        "all_buildings": "Tutti gli edifici"
+        "all_buildings": "Tutti gli edifici",
+        "format": "📝/⚡ Formato"
     }
 }
